Updates to animation, fix to css for AOS removing overflow hidden from HTML/body css

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,7 +10,8 @@
 
 html, body {
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    // overflow-x: hidden;
+    width: 100%;
    }
 
 body {
